--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.4.1",
+    "react-native-error-boundary": "^1.1.9",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-otp-textinput": "0.0.8",
     "react-native-ratings": "^8.0.4",
